# kpi-lens

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  render.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/samples/: sample_kpi_data.csv
kpi_lens/: config.py
kpi_lens/anomaly/: base.py  ensemble.py  ml.py  statistical.py  threshold.py
kpi_lens/api/: main.py
kpi_lens/api/routes/: anomalies.py  health.py  kpis.py  llm.py  reports.py
kpi_lens/dashboard/: app.py
kpi_lens/dashboard/pages/: 01_overview.py  02_kpi_deep_dive.py  03_anomaly_log.py  04_llm_analyst.py  05_reports.py
kpi_lens/db/: repository.py  schema.py
kpi_lens/ingestion/: loader.py  scheduler.py  validator.py
kpi_lens/kpis/: definitions.py  snapshot.py
kpi_lens/llm/: analyst.py  client.py  context_builder.py  prompts.py
kpi_lens/mcp_server/: server.py
kpi_lens/reporting/: excel_exporter.py  powerpoint.py
scripts/: run_anomaly_scan.py  seed_database.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_anomalies.py  test_api_health.py  test_api_kpis.py  test_api_llm.py  test_api_reports.py
tests/unit/: test_ensemble_detector.py  test_kpi_definitions.py  test_llm_analyst.py  test_llm_client.py  test_ml_detector.py  test_reporting.py  test_repository.py  test_statistical.py  test_threshold_detector.py
